2005-08-25  Nathaniel Smith  <njs@pobox.com>

	* file_io.cc (test_book_keeping_file): Remove.

2005-08-25  Nathaniel Smith  <njs@pobox.com>

	* file_io.cc (walk_tree_recursive, walk_tree): Implement.

2005-08-25  Nathaniel Smith  <njs@pobox.com>

	* paths.cc (const_system_path): Do tilde expansion.

2005-08-25  Nathaniel Smith  <njs@pobox.com>

	* file_io.cc (read_localized_data, read_data_for_command_line) 
	(write_localized_data, write_data, write_data_impl): Implement.

2005-08-25  Nathaniel Smith  <njs@pobox.com>

	* file_io.cc (read_data): Implement.  Remove the base64<gzip<>>
	versions.

2005-08-25  Nathaniel Smith  <njs@pobox.com>

	* file_io.cc (move_file, move_dir): Implement.

2005-08-25  Nathaniel Smith  <njs@pobox.com>

	* file_io.cc (assert_path_is_nonexistent, assert_path_is_file) 
	(assert_path_is_directory, require_path_is_nonexistent) 
	(require_path_is_file, require_path_is_directory) 
	(ident_existing_file, mkdir_p, make_dir_for, delete_file) 
	(delete_dir_recursive): Implement.

2005-08-25  Nathaniel Smith  <njs@pobox.com>

	* Audit uses of 'file_exists', because its semantics have changed;
	it now checks to see if a path exists and is a regular file,
	rather than that it simply exists.  A fair amount of code already
	thought it meant that... other places now use 'path_exists'.
	
2005-08-25  Nathaniel Smith  <njs@pobox.com>

	* file_io.cc (path_exists, directory_exists, file_exists):
	Implement.

2005-08-25  Nathaniel Smith  <njs@pobox.com>

	* platform.hh (get_path_status): New function.
	* unix/fs.cc (get_path_status): Implement.
	* win32/fs.cc (get_path_status): Implement inefficiently (does
	win32 have stat?)

2005-08-25  Nathaniel Smith  <njs@pobox.com>

	* file_io.cc (get_homedir, tilde_expand, book_keeping_file)
	(book_keeping_dir): Remove.

2005-08-25  Nathaniel Smith  <njs@pobox.com>

	* platform.hh (get_homedir): New function.
	* {win32,unix}/fs.cc (get_homedir): Expose.

2005-08-25  Nathaniel Smith  <njs@pobox.com>
